# HikvisonPLC

./: CMakeLists.txt  hikvisonhandler.cpp  hikvisonhandlercstyelfuncs.cpp  hikvisonviewer.cpp  hikvisonviewer.h  hkvsplayer.cpp  imageviewer.cpp  imageviewer.h  main.cpp  main.qml  qml.qrc
